--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest",
     "start": "node server.js",
+    "watch": "nodemon server.js",
     "seeds": "node seeds/index.js"
   },
   "author": "",
@@ -14,7 +15,9 @@
     "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^6.0.5",
     "mysql2": "^2.1.0",
+    "nodemon": "^2.0.15",
     "sequelize": "^5.21.5"
   },
   "devDependencies": {
